# cl-lite

./: INSTALLATION.md  README.md  pyproject.toml  setup.cfg
cl_lite/: __init__.py
cl_lite/backbone/: __init__.py  resnet.py  resnet_cifar.py
cl_lite/core/: __init__.py  app.py  datamodule.py  evaluator.py  module.py
cl_lite/dataset/: __init__.py  cifar.py  imagenet.py  tiny_imagenet.py
cl_lite/dataset/base/: __init__.py  image_dataset.py  image_meta_dataset.py  subset.py  utils.py
cl_lite/deep_inversion/: __init__.py  deep_inversion.py  feature_hook.py  gaussian_smoothing.py  generative_inversion.py
cl_lite/deep_inversion/generator/: __init__.py  cifar.py  imagenet.py  tiny_imagenet.py
cl_lite/head/: __init__.py  dynamic_cosine.py  dynamic_lsc.py  dynamic_nme.py  dynamic_simple.py  simple.py
cl_lite/memory/: __init__.py  base.py  herding.py
cl_lite/mixin/: __init__.py  feature_hook.py  logging.py  loss.py
cl_lite/nn/: __init__.py  init.py  module.py
cl_lite/nn/loss/: __init__.py  distill_cross_entropy.py  distill_relation.py  nca.py  pod.py
cl_lite/optim/: __init__.py  lr_scheduler.py
