[metadata]
name = cl-lite
version = attr: cl_lite._version.__version__
url = https://github.com/gqk/cl-lite
author = Qiankun Gao
author_email = gqk@stu.pku.edu.cn
description = A light-weight Class-Increment Learning framework and toolbox based on PyTorch-Lightning.
license = Apache-2.0
project_urls =
    Source = https://github.com/gqk/cl-lite

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    pytorch_lightning==1.4.9
    jsonargparse==3.19.3
    torchmetrics==0.4.1